# KingdoMicroKernel

./: .clang-format  .gitignore  CMakeLists.txt  Makefile  toolchain.cmake
arch/aarch64/: CMakeLists.txt  head.S  main.c  tools.S
arch/aarch64/boot/: CMakeLists.txt  linker.tpl.ld
arch/aarch64/boot/raspi3/: CMakeLists.txt
arch/aarch64/boot/raspi3/include/: boot.h  consts.h  image.h
arch/aarch64/boot/raspi3/init/: init.c  mmu.c  start.S  tools.S
arch/aarch64/boot/raspi3/peripherals/: uart.c  uart.h
arch/aarch64/irq/: CMakeLists.txt  irq.S  irq_entry.S  irq_entry.c  irq_entry.h
arch/aarch64/machine/: CMakeLists.txt  pmu.c  smp.c
arch/aarch64/mm/: CMakeLists.txt  page_table.S  page_table.c
arch/aarch64/plat/raspi3/: CMakeLists.txt  poweroff.c
arch/aarch64/plat/raspi3/irq/: irq.c  timer.c
arch/aarch64/plat/raspi3/uart/: uart.c  uart.h
include/arch/aarch64/arch/: boot.h  mmu.h  sync.h  tools.h
include/arch/aarch64/arch/machine/: esr.h  pmu.h  registers.h  smp.h
include/arch/aarch64/arch/mm/: page_table.h
include/arch/aarch64/plat/raspi3/: irq_num.h  machine.h  mailbox.h
include/arch/machine/: registers.h
include/common/: bitops.h  errno.h  kprint.h  list.h  lock.h  macro.h  poweroff.h  types.h  utils.h  vars.h
include/io/: uart.h
include/irq/: irq.h  timer.h
include/lib/: printk.h
include/mm/: buddy.h  common_pte.h  kmalloc.h  mm.h  page_table.h  slab.h
include/uapi/: memory.h  syscall_num.h
irq/: CMakeLists.txt  timer.c
lib/: CMakeLists.txt  printk.c
mm/: CMakeLists.txt  buddy.c  kmalloc.c  mm.c  slab.c  slab_test.c
scripts/gdb/: launch.json
syscall/: CMakeLists.txt  syscall.c
tools/: format.sh
